--- a/manifest.json
+++ b/manifest.json
@@ -38,7 +38,28 @@
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
-      "js":      ["src/js/inject.js"]
+      "css" : [
+        "src/css/angular-csp.css",
+        "src/css/angular-material.min.css",
+        "src/css/bootstrap.min.css",
+        "src/css/font-awesome.min.css",
+        "src/css/popup.css",
+        "src/css/cookie.css",
+        "src/css/reportcard.css"
+      ],
+      "js": [
+        "src/js/inject.js",
+        "src/js/sjcl.js",
+        "src/js/jquery.min.js",
+        "src/js/angular.min.js",
+        "src/js/angular-aria.min.js",
+        "src/js/angular-animate.min.js",
+        "src/js/angular-messages.min.js",
+        "src/js/angular-material.min.js",
+        "src/js/background.js",
+        "src/js/bootstrap.min.js",
+        "src/js/app.js"
+      ]
     }
   ]
 }
